# 3dGraphics

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  main.cpp
.github/workflows/: cmake.yml
libs/glad/: CMakeLists.txt
libs/json/: CMakeLists.txt
libs/stb_image/: CMakeLists.txt
libs/tigl/: CMakeLists.txt
libs/tigl/include/: tigl.h
libs/tigl/src/: tigl.cpp
modules/ecs/: CMakeLists.txt
modules/ecs/include/: Component.h  GameObject.h  Scene.h
modules/ecs/include/components/: Camera.h  Mesh.h  Transform.h
modules/ecs/include/components/scripts/: BulletScript.h  TankScript.h
modules/ecs/include/interfaces/: DrawAble.h  UpdateAble.h
modules/ecs/src/: Component.cpp  GameObject.cpp  Scene.cpp
modules/ecs/src/components/: Camera.cpp  Mesh.cpp  Transform.cpp
modules/ecs/src/components/scripts/: BulletScript.cpp  TankScript.cpp
modules/fpscam/: CMakeLists.txt
modules/fpscam/include/: FpsCam.h
modules/fpscam/src/: FpsCam.cpp
modules/game_timer/: CMakeLists.txt
modules/game_timer/include/: GameTimer.h
modules/game_timer/src/: GameTimer.cpp
modules/input_system/: CMakeLists.txt
modules/input_system/include/: InputSystem.h
modules/input_system/src/: InputSystem.cpp
modules/model_loader/: CMakeLists.txt
modules/model_loader/include/: ModelCache.h  ObjModel.h  Texture.h
modules/model_loader/src/: ModelCache.cpp  ObjModel.cpp  Texture.cpp
modules/scene_loader/: CMakeLists.txt
modules/scene_loader/include/: FileReader.h  FileReaderFactory.h  JsonFileReader.h  SceneLoader.h  TxtFileReader.h
modules/scene_loader/src/: FileReaderFactory.cpp  JsonFileReader.cpp  SceneLoader.cpp  TxtFileReader.cpp
resource/models/car/: honda_jazz.mtl
resource/models/shell/: TankShell.mtl
resource/models/ship/: shipA_OBJ.mtl
resource/models/steve/: Steve.mtl
resource/models/tanks/: tank1.mtl
resource/scenes/: scene.json  scene.txt
test/: CMakeLists.txt  test.cpp
